# CCW

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.vi.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
action/: action.rar
scripts/: package-portable.ps1
src/: App.tsx  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  commands.rs  lib.rs  main.rs  models.rs  platform.rs  process.rs  quarantine.rs  safety.rs  scanner.rs  scheduler.rs  state.rs
src/components/: CleanupModals.test.tsx  CleanupModals.tsx  IssueHub.tsx  Mascot.tsx  PowerPanels.tsx  Treemap.tsx
src/lib/: format.ts  selection.test.ts  selection.ts  tauri.ts
