[package]
name = "claude-cache-warden"
version = "0.2.0"
description = "A local Claude Desktop cache scanner and cleaner"
authors = ["Claude Cache Warden"]
edition = "2021"

[lib]
name = "claude_cache_warden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
